# tree-sitter-mql5

./: .eslintrc.js  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mql5.h  tree-sitter-mql5.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mql5/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMql5Tests/: TreeSitterMql5Tests.swift
src/: grammar.json  parser.c
