[package]
name = "tree-sitter-mql5"
description = "MQL5 language grammar for the tree-sitter."
version = "0.1.0"
authors = ["chaploud <kudou-s0camfci76w@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mql5"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/chaploud/tree-sitter-mql5"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
